docs: update presentation.tex

--- a/latex/presentation.tex
+++ b/latex/presentation.tex
@@ -35,8 +35,9 @@
   \begin{frame}
   \frametitle{内容提要}
     \begin{itemize}
-      \item{2019回顾}
-      \item{2020展望}
+      \item{回首2019}
+      \item{简要总结}
+      \item{展望2020}
     \end{itemize}
   \end{frame}
   
@@ -121,23 +122,63 @@
   \end{frame}
 
   \begin{frame}
-    \frametitle{回首2019}
+    \frametitle{简要总结}
     在过去的一年里，我们有做的比较好的地方，也存在很多不足
+
     \begin{columns}
-      \column{0.4\textwidth}
-        \includegraphics[scale=0.4]{../../photos/bar/smile.png}
+      \column{0.5\textwidth}
+        \includegraphics[scale=0.35]{../../photos/bar/smile.png}
         \begin{itemize}
-          \item 严格按照计划表执行任务
-          \item 具有良好的代码调优意识
-          \item 具有较好的代码调优意识
+          \item 严格把控计划进度
+          \item 规范的git提交记录
+          \item 设计模式和语言特性的大量使用
         \end{itemize}
-      \column{0.4\textwidth}
-        \includegraphics[scale=0.4]{../../photos/bar/cry.png}
+      \column{0.5\textwidth}
+        \includegraphics[scale=0.35]{../../photos/bar/cry.png}
         \begin{itemize}
-          \item a
-          \item b
-          \item c
+          \item 缺少全局性的思考
+          \item 数据结构使用不合理
+          \item 日志输出的重视程度不够
         \end{itemize}
+    \end{columns}
+  \end{frame}
+
+  % 2020
+  \begin{frame}
+  \frametitle{展望2020}
+    \begin{columns}
+      \column{0.48\textwidth}
+        \includegraphics[width=\textwidth]{../../photos/bar/big-data.png}
+      \column{0.52\textwidth}
+      \begin{itemize}
+        \item 支持10亿级别的分布式图数据计算
+      \end{itemize}
+    \end{columns}
+  \end{frame}
+
+  \begin{frame}
+  \frametitle{展望2020}
+    \begin{columns}
+      \column{0.48\textwidth}
+        \includegraphics[width=\textwidth]{../../photos/bar/gremlin-apache.png}
+      \column{0.52\textwidth}
+      \begin{itemize}
+        \item 支持10亿级别的分布式图数据计算
+        \item 扩充和优化Tinkerpop的图计算算法
+      \end{itemize}
+    \end{columns}
+  \end{frame}
+
+  \begin{frame}
+  \frametitle{展望2020}
+    \begin{columns}
+      \column{0.48\textwidth}
+        \includegraphics[width=\textwidth]{../../photos/bar/gremlin-apache.png}
+      \column{0.52\textwidth}
+      \begin{itemize}
+        \item 支持10亿级别的分布式图数据计算
+        \item 扩充和优化Tinkerpop的图计算算法
+      \end{itemize}
     \end{columns}
   \end{frame}
 \end{document}
